src/test/ui/parser/trait-object-trait-parens.stderr
error: expected one of `!` or `::`, found `<eof>`
  --> $DIR/trait-object-trait-parens.rs:21:1
   |
LL | FAIL //~ ERROR
   | ^^^^ expected one of `!` or `::` here

error: aborting due to previous error

